# myAwtrix

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  app_version.c  app_version.h  display.c  display.h  hsv2rgb.c  hsv2rgb.h  main.c  mqtt_pro.c  mqtt_pro.h  my_ws2812.c  my_ws2812.h  pic.h  simple_ota_example.c  smartconfig_wifi.c  smartconfig_wifi.h  wifi.c  wifi.h  ws2812.c  ws2812.h
main/ZLG_GUI/: convert_color.c  convert_color.h  font24_32.c  font24_32.h  font5_7.c  font5_7.h  font8_8.c  font8_8.h  font_macro.h  gui_basic.c  gui_basic.h  gui_comm.h  gui_config.h  gui_stockc.c  gui_stockc.h  gui_types.h  lcmdrv.c  lcmdrv.h  loadbit.c  loadbit.h  menu.c  menu.h  spline.c  spline.h  windows.c  windows.h  zlg_gui.h
